sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:23: error: not found: value echange
      echange(candidat,0)
      ^NaiveBaseball:25: error: not found: value echange
      echange(candidat,1)
      ^