sort.baseball.NaiveBaseball.scala.code
override def run() {
  var n = getNombreBases()
  var trou = getTrouBase()
  var candidat = trou
  while (!estTrie()) {
    trou = getTrouBase()
    if (trou >= n-1) {
      candidat = 0
    } else {
      candidat += 1
    }
    var couleur1 = getCouleurJoueur(candidat,0)
    var couleur2 = getCouleurJoueur(candidat,1)
    var distance1 = candidat - couleur1
    var distance2 = candidat - couleur2
    if (couleur1 > candidat) {
      distance1 = candidat - couleur1 + 4
    }
    if (couleur2 > candidat) {
      distance1 = candidat - couleur2 + 4
    }
    if (distance1 > distance2) {
      echange(candidat,0)
    } else {
      echange(candidat,1)
    }
  }
}